# rustwebdev

./: .env  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  log4rs.yaml  logs.txt
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
migrations/: 20230507142950_questions_table.up.sql  20230507143328_answers_table.up.sql
mock-server/: Cargo.toml
mock-server/src/: lib.rs
src/: config.rs  lib.rs  main.rs  profanity.rs  store.rs
src/routes/: answer.rs  auth.rs  mod.rs  question.rs
src/types/: account.rs  answer.rs  mod.rs  pagination.rs  question.rs
