[package]
name = "rest_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
warp = "0.3.5"
handle-errors = { path = "handle-errors"}
log = "0.4.17"
env_logger = "0.10.0"
log4rs = "1.2.0"
uuid = { version = "1.3.2", features = ["v4"] }
