[package]
name = "rustwebdev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
warp = "0.3.5"
handle-errors = { path = "handle-errors"}
uuid = { version = "1.3.2", features = ["v4"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = { version = "0.1.37", features = ["log"] }
dotenvy = "0.15.7"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "migrate", "postgres"] }
reqwest = { version = "0.11.17", features = ["json"] }
reqwest-middleware = "0.2.1"
reqwest-retry = "0.2.2"
rand = "0.8.5"
rust-argon2 = "1.0.0"
paseto = "2.0.2"
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["derive"] }
proc-macro2 = "1.0.56"

[build-dependencies]
platforms = "3.0.2"