[package]
name = "handle-errors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.17"
reqwest-middleware = "0.2.1"
rust-argon2 = "1.0.0"
sqlx = "0.6.3"
tracing = { version = "0.1.37", features = ["log"] }
warp = "0.3.5"
